# calorie-tracker-backend

./: .clangd  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  docker-compose.yml  main.cpp  out.txt
data/: pa_compendium_activities.json
docs/: api.md  database.dbml  database.md
sql/: init.sql  seed_exercises.sql
src/application/ports/: IExerciseLoader.hpp  IPasswordHasher.hpp  ITokenGenerator.hpp
src/application/use_cases/: SeedExercisesUseCase.cpp  SeedExercisesUseCase.hpp
src/application/use_cases/auth/: GetCurrentUserUseCase.hpp  LoginUseCase.hpp  LogoutUseCase.hpp  RegisterUseCase.hpp
src/application/use_cases/daily/: AddMealEntryUseCase.hpp  DeleteMealEntryUseCase.hpp  GetDailyLogUseCase.hpp  UpdateDailyLogUseCase.hpp  UpdateMealEntryUseCase.hpp
src/application/use_cases/exercise_logs/: CreateExerciseLogUseCase.hpp  DeleteExerciseLogUseCase.hpp  ListExerciseLogsUseCase.hpp  UpdateExerciseLogUseCase.hpp
src/application/use_cases/exercises/: CreateExerciseUseCase.hpp  GetExerciseUseCase.hpp  SearchExercisesUseCase.hpp
src/application/use_cases/foods/: CreateFoodUseCase.hpp  DeleteFoodUseCase.hpp  GetFoodUseCase.hpp  SearchFoodsUseCase.hpp  UpdateFoodUseCase.hpp
src/application/use_cases/goals/: CreateGoalUseCase.hpp  DeactivateGoalUseCase.hpp  GetActiveGoalUseCase.hpp  UpdateGoalUseCase.hpp
src/application/use_cases/measurements/: CreateMeasurementUseCase.hpp  DeleteMeasurementUseCase.hpp  ListMeasurementsUseCase.hpp
src/application/use_cases/profile/: GetProfileUseCase.hpp  UpsertProfileUseCase.hpp
src/application/use_cases/weight/: CreateWeightLogUseCase.hpp  DeleteWeightLogUseCase.hpp  ListWeightLogsUseCase.hpp  UpdateWeightLogUseCase.hpp
src/domain/entities/: BodyMeasurement.hpp  DailyLog.hpp  Exercise.hpp  ExerciseLog.hpp  Food.hpp  MealEntry.hpp  Session.hpp  User.hpp  UserGoal.hpp  UserProfile.hpp  WeightLog.hpp
src/domain/enums/: ActivityLevel.hpp  ExerciseCategory.hpp  Gender.hpp  GoalType.hpp  MealType.hpp
src/domain/repositories/: IBodyMeasurementRepository.hpp  IDailyLogRepository.hpp  IExerciseLogRepository.hpp  IExerciseRepository.hpp  IFoodRepository.hpp  IMealEntryRepository.hpp  ISessionRepository.hpp  IUserGoalRepository.hpp  IUserProfileRepository.hpp  IUserRepository.hpp  IWeightLogRepository.hpp
src/infrastructure/auth/: PasswordHasher.cpp  PasswordHasher.hpp  TokenGenerator.cpp  TokenGenerator.hpp
src/infrastructure/config/: EnvLoader.hpp
src/infrastructure/loaders/: JsonCompendiumLoader.cpp  JsonCompendiumLoader.hpp
src/infrastructure/persistence/: PostgresBodyMeasurementRepository.cpp  PostgresBodyMeasurementRepository.hpp  PostgresDailyLogRepository.cpp  PostgresDailyLogRepository.hpp  PostgresExerciseLogRepository.cpp  PostgresExerciseLogRepository.hpp  PostgresExerciseRepository.cpp  PostgresExerciseRepository.hpp  PostgresFoodRepository.cpp  PostgresFoodRepository.hpp  PostgresMealEntryRepository.cpp  PostgresMealEntryRepository.hpp  PostgresSessionRepository.cpp  PostgresSessionRepository.hpp  PostgresUserGoalRepository.cpp  PostgresUserGoalRepository.hpp  PostgresUserProfileRepository.cpp  PostgresUserProfileRepository.hpp  PostgresUserRepository.cpp  PostgresUserRepository.hpp  PostgresWeightLogRepository.cpp  PostgresWeightLogRepository.hpp
src/presentation/: Serializers.hpp
src/presentation/controllers/: AdminController.cpp  AdminController.hpp  AuthController.cpp  AuthController.hpp  DailyLogController.cpp  DailyLogController.hpp  ExerciseController.cpp  ExerciseController.hpp  ExerciseLogController.cpp  ExerciseLogController.hpp  FoodController.cpp  FoodController.hpp  GoalController.cpp  GoalController.hpp  MeasurementController.cpp  MeasurementController.hpp  ProfileController.cpp  ProfileController.hpp  WeightController.cpp  WeightController.hpp
src/presentation/middleware/: AuthMiddleware.cpp  AuthMiddleware.hpp
